task list structure outlined in html

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <header>
         <h1>Task List 2024</h1>
         <form id='new-task-form'>
-            <input type='text' id='new-task-input' placeholder='What do you have planned' />
+            <input type='text' id='new-task-input' placeholder='What do you have planned?' />
             <input type='submit' id='new-task-submit' value='Add task' />
         </form>
     </header>
     <main>
-        <section class='task-list'>
+        <section class="task-list">
             <h2>Tasks</h2>
-            <!-- <div id='tasks'>
-                <div class='task'>
+            <div id="tasks">
+                <!-- <div class='task'>
                     <div class='content'>
                         <input type='text' class='text' value='My shiny task' readonly />
                     </div>
@@ -28,8 +28,8 @@
                         <button class="edit">Edit</button>
                         <button class="delete">Delete</button>
                     </div>
-                </div>
-            </div> -->
+                </div> -->
+            </div>
         </section>
     </main>
     <script src="main.js"></script>
